exports[`test should render a default Column 1`] = `
<div
  className="column">
  Test
</div>
`;

exports[`test should render column with all size breakpoints 1`] = `
<div
  className="column column-tiny-12 column-small-3 column-medium-2 column-large-1 column-huge-2">
  Test
</div>
`;

exports[`test should render specified width column 1`] = `
<div
  className="column column-3">
  Test
</div>
`;
